Made requested updates requested by Kevin. Fixed the sub-header and visualization “topSections” on the Federal Account Summary page on smaller screen sizes. (Request from Mike B)

--- a/src/_scss/layouts/default/header/nav/_menu.scss
+++ b/src/_scss/layouts/default/header/nav/_menu.scss
@@ -5,6 +5,7 @@
     ul.nav-menu {
         @include clearfix;
         @include unstyled-list;
+        float: right;
         li {
             display: inline-block;
             margin-left: rem(30);
